--- a/ORBank_2.0/Admin.resx
+++ b/ORBank_2.0/Admin.resx
@@ -117,8 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="VwCN" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\VwCN.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <metadata name="usersBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD/tQD//7UA//+1AP8AAAAA/7UA//+1AP//tQD/AAAAAP+1AP8AAAAAAAAAAP+1AP8AAAAA/7UA/wAA
+        AAD/tQD//7UA/wAAAAD/tQD/AAAAAP+1AP8AAAAA/7UA/wAAAAD/tQD/AAAAAP+1AP//tQD/AAAAAP+1
+        AP8AAAAA/7UA//+1AP//tQD/AAAAAAAAAAD/tQD//7UA//+1AP8AAAAA/7UA//+1AP//tQD//7UA/wAA
+        AAD/tQD//7UA/wAAAAD/tQD/AAAAAP+1AP8AAAAAAAAAAAAAAAD/tQD/AAAAAP+1AP//tQD/AAAAAP+1
+        AP8AAAAA/7UA/wAAAAD/tQD//7UA//+1AP//tQD/AAAAAP+1AP//tQD//7UA/wAAAAD/tQD/AAAAAAAA
+        AAD/tQD/AAAAAP+1AP8AAAAA/7UA/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//
+        AP8AAAAAAAAAAAAAAAD//wD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD//wD/AAAAAAAAAAD//wD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA//8A////AP///wD/AAAAAAAA
+        AAAAAAAA//8A/wAAAAD//wD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA//8A/wAAAAAAAAAAAAAAAP//
+        AP8AAAAAAAAAAP//AP///wD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AP8AAAAAAAAAAAAA
+        AAD//wD/AAAAAAAAAAD//wD/AAAAAP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wD/AAAAAAAA
+        AAAAAAAA//8A/wAAAAAAAAAA//8A/wAAAAAAAAAA//8A/wAAAAAAAAAAAAAAAAAAAAAAAAAA//8A/wAA
+        AAAAAAAAAAAAAP//AP8AAAAAAAAAAP//AP8AAAAAAAAAAP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAP//
+        AP8AAAAAAAAAAAAAAAD//wD/AAAAAAAAAAD//wD///8A////AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD//wD/AAAAAAAAAAAAAAAA//8A/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP//AP///wD///8A/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAEWoAAFVKAAAxCQAAXSoAABFqAAD/uwAA/7cAAOOvAADdnwAA3a8AAN23AADdtwAA3Y8AAN3/
+        AADj/wAA//8AAA==
+</value>
   </data>
 </root>
